force-app/main/default/objects/OrgHealthModuleConfig__mdt/OrgHealthModuleConfig__mdt.object-meta.xml
<CustomObject>
    <label>Org Health Module Config</label>
    <pluralLabel>Org Health Module Configs</pluralLabel>
    <description>Custom Metadata Type that stores per-module weight, enabled flag, and display order. Deployable and version-controlled — no code change needed to retune weights.</description>
</CustomObject>