force-app/main/default/objects/OrgHealthModuleConfig__mdt/fields/DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>DisplayOrder__c</fullName>
    <label>Display Order</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>