force-app/main/default/objects/OrgHealthModuleConfig__mdt/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <type>Text</type>
    <length>50</length>
    <required>true</required>
</CustomField>